HSEARCH-4780 Test Hibernate Search against JDK 21